# pynterlinear

./: .bumpversion.cfg  README.md  pynterlinear_test_cases.py  setup.cfg  setup.py
.github/workflows/: python-project.yml
docs/: conf.py  index.rst
pynterlinear/: __init__.py  cldf2latex.py  cldf2word.py  csv2latex.py  csv2word.py  glossing.txt
pynterlinear.egg-info/: PKG-INFO  SOURCES.txt
src/pynterlinear/: __init__.py  csv2latex.py  csv2word.py  helpers.py
tests/: test_pynt.py
