[metadata]
name = pynterlinear
version = 0.0.1
author = Anonymous
author_email = 
description = Converts interlinear text from CSV (or any source) to LaTeX and Microsoft Word.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
scripts =
    bin/csv2latex
    bin/csv2word
install_requires =
	python-docx
	pyperclip